Add exports.